<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_color"
    android:orientation="vertical"
    android:padding="24dp"
    android:gravity="center"
    tools:context=".Activity_Admin">

    <Button
        android:id="@+id/btnEmpleados"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:text="@string/Empleados"
        android:background="@drawable/estilo_boton"/>

    <Button
        android:id="@+id/btnLocal"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:text="@string/Local"
        android:background="@drawable/estilo_boton"
        android:layout_marginTop="15dp"/>

    <Button
        android:id="@+id/btnHorarios"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:text="@string/Horarios"
        android:background="@drawable/estilo_boton"
        android:layout_marginTop="15dp"/>
    <Button
        android:id="@+id/btnVisualizacion"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/estilo_boton"
        android:text="@string/Registro" />


</LinearLayout>