<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg_color"
    android:padding="24dp"
    tools:context=".activity_InsertarHorario">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="25dp"
        android:text="@string/DatosHorario"
        android:textAlignment="center"
        android:textSize="30dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Nombre"
            android:textSize="15dp" />

        <EditText
            android:id="@+id/edtNombreHorario"
            android:inputType="textPersonName"
            android:layout_width="200dp"
            android:layout_marginLeft="15dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/HoraEntrada"
            android:textSize="15dp" />

        <EditText
            android:id="@+id/edtHoraEntrada"
            android:gravity="end"
            android:maxLength="2"
            android:inputType="number"
            android:layout_width="50dp"
            android:layout_marginLeft="15dp"
            android:layout_height="wrap_content"
            android:hint="00"
            android:layout_weight="1"
            android:background="@color/white" />
        <TextView
            android:textAlignment="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text=":"
            android:textSize="15dp" />
        <EditText
            android:id="@+id/edtMinutoEntrada"
            android:inputType="number"
            android:layout_width="50dp"
            android:gravity="end"
            android:layout_marginLeft="15dp"
            android:hint="00"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/HoraSalida"
            android:textSize="15dp" />

        <EditText
            android:id="@+id/edtHorasalida"
            android:inputType="number"
            android:layout_width="50dp"
            android:hint="00"
            android:layout_marginLeft="15dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:background="@color/white" />
        <TextView
            android:textAlignment="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text=":"
            android:textSize="15dp" />
        <EditText
            android:id="@+id/edtMinutoSalida"
            android:inputType="number"
            android:layout_width="50dp"
            android:hint="00"
            android:layout_marginLeft="15dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:background="@color/white" />

    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_height="wrap_content"
        android:text="Dias"
        android:layout_marginBottom="10dp"
        android:textSize="15dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <CheckBox
                android:id="@+id/Lunes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/L"/>
            <CheckBox
                android:id="@+id/Martes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/M"/>
            <CheckBox
                android:id="@+id/Miercoles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/X"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:orientation="vertical">
            <CheckBox
                android:id="@+id/Jueves"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/J"/>
            <CheckBox
                android:id="@+id/Viernes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/V"/>
            <CheckBox
                android:id="@+id/Sabado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/S"/>


        </LinearLayout>
        <CheckBox
            android:layout_marginLeft="15dp"
            android:id="@+id/Domingo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/D"/>

    </LinearLayout>



    <Button
        android:id="@+id/btnAddHorario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/estilo_boton"
        android:layout_gravity="end"
        android:layout_marginTop="100dp"
        android:text="@string/Introducir" />

</LinearLayout>