<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg_color"
    android:padding="24dp"
    tools:context=".activity_registro">



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="25dp"
        android:text="@string/Datos"
        android:textAlignment="center"
        android:textSize="30dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Nombre"
            android:textSize="15dp" />

        <EditText
            android:id="@+id/edtNombreRegistro"
            android:inputType="textPersonName"
            android:layout_width="200dp"
            android:layout_marginLeft="15dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp">


        <TextView
            android:id="@+id/lblTlf1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/Telefono1"
            android:textSize="15dp" />

        <EditText
            android:id="@+id/edttlf1"
            android:layout_width="200dp"
            android:layout_marginLeft="15dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp">


        <TextView
            android:id="@+id/lblTlf2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Telefono2"
            android:textSize="15dp" />

        <EditText
            android:id="@+id/edttlf2"
            android:layout_width="200dp"
            android:layout_marginLeft="15dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp">
        <TextView
            android:id="@+id/lblTlf3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Telefono3"
            android:textSize="15dp" />

        <EditText
            android:id="@+id/edttlf3"
            android:layout_width="200dp"
            android:layout_marginLeft="15dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp">
        <TextView
            android:id="@+id/lblNPersonas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/NPersonas"
            android:textSize="15dp" />

        <Spinner
            android:id="@+id/cmbPersonas"
            android:layout_width="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_height="23dp"
             android:background="@color/white" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Mesa"
            android:textSize="15dp" />

        <Spinner
            android:id="@+id/Combo"
            android:layout_width="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_height="23dp"
            android:background="@color/white"
 />



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="24dp">

        <Button
            android:id="@+id/btnTomar_Nota"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/estilo_boton"
            android:text="@string/TomarNota"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btnAddRegistro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/estilo_boton"
            android:layout_marginTop="15dp"
            android:text="@string/Introducir" />
    </LinearLayout>





</LinearLayout>