<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg_color"
    android:padding="24dp"
    tools:context=".activity_InsertarEmpleado">



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="25dp"
        android:text="@string/DatosEmpleado"
        android:textAlignment="center"
        android:textSize="30dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Nombre"
            android:textSize="15dp" />

        <EditText
            android:id="@+id/edtNombre"
            android:inputType="textPersonName"
            android:layout_width="200dp"
            android:layout_marginLeft="15dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Apellido"
            android:textSize="15dp" />

        <EditText
            android:id="@+id/edtApellidoEmpleado"
            android:inputType="text"
            android:layout_width="200dp"
            android:layout_marginLeft="15dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Telefono"
            android:textSize="15dp" />

        <EditText
            android:id="@+id/edtTlfEmpleado"
            android:layout_width="200dp"
            android:layout_marginLeft="15dp"
            android:inputType="phone"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Horario"
            android:textSize="15dp" />

        <Spinner
            android:id="@+id/cmbHorario"
            android:layout_width="197dp"
            android:layout_marginLeft="15dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:background="@color/white"
            android:layout_weight="1" />


    </LinearLayout>

    <Button
        android:id="@+id/btnAddEmpleado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/estilo_boton"
        android:layout_gravity="end"
        android:layout_marginTop="100dp"
        android:text="@string/Introducir" />

</LinearLayout>