<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity_TomarNota"
    android:background="@drawable/bg_color"
    android:padding="24dp"
    android:gravity="center"
    android:orientation="vertical"
    android:id="@+id/Rly">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Nota"
        android:layout_weight="1"
        android:textSize="50dp"
        />

    <EditText
        android:id="@+id/edtnota"
        android:layout_weight="20"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="start"
        />

    <Button
        android:layout_weight="1"
        android:id="@+id/btnAceptar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aceptar"
        android:visibility="gone"
        android:layout_gravity="end"
        />

    <Button
        android:layout_weight="1"
        android:id="@+id/btnEnviar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Enviar"
        android:layout_gravity="end"
        />

</LinearLayout>