<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_color"
    android:orientation="vertical"
    android:padding="24dp"
    tools:context=".activity_admin_mesas">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mesas"
        android:textAlignment="center"
        android:textSize="25dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:orientation="vertical"

        >

        <Button
            android:id="@+id/btnInsertarMesa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/estilo_boton"
            android:layout_weight="1"
            android:text="@string/AddMesa" />

        <Button
            android:id="@+id/btnBorrarMesa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/estilo_boton"
            android:layout_weight="1"
            android:text="@string/DeleteMesa" />


    </LinearLayout>


    <ListView
        android:id="@+id/listaAdminMesas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>