<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/fondolista"
    android:padding="10dp">

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="6dp"
        android:layout_gravity="center"
        android:src="@mipmap/registro"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="15dp"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fecha"
                android:textSize="15dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/lblFilaVisualizarFecha"
                android:layout_width="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:text="asdf"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/NP"
                android:layout_marginLeft="12dp"
                android:textSize="15dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/lblFilaVisualizarNPersonas"
                android:layout_width="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:text="asdf"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Nombre"
                android:textSize="15dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/lblFilaVisualizarNombre"
                android:layout_width="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:text="asdf"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/HoraEntrada"
                android:textSize="15dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/lblFilaVisualizarHE"
                android:layout_width="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:text="asdf"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:text=":"/>
            <TextView
                android:id="@+id/lblFilaVisualizarME"
                android:layout_width="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:text="asdf"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:textStyle="bold"
                android:text="@string/HoraSalida"/>

            <TextView
                android:id="@+id/lblFilaVisualizarHS"
                android:layout_width="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:text="asdf"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:text=":"/>

            <TextView
                android:id="@+id/lblFilaVisualizarMS"
                android:layout_width="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:text="asdf"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:textStyle="bold"
                android:text="@string/tlf1"/>

            <TextView
                android:id="@+id/lblFilaVisualizarTlf1"
                android:layout_width="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:text="s"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/tlf2"
                android:textSize="15dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/lblFilaVisualizarTlf2"
                android:layout_width="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:text="s"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:textStyle="bold"
                android:text="@string/Tlf3"/>

            <TextView
                android:id="@+id/lblFilaVisualizarTlf3"
                android:layout_width="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:text="s"/>

        </LinearLayout>


    </LinearLayout>

</LinearLayout>